fix media in firefox. remove scrollbar

--- a/src/app/ocr/capture-camera/capture-camera.component.sass
+++ b/src/app/ocr/capture-camera/capture-camera.component.sass
@@ -2,3 +2,7 @@
     position: absolute
     top:50%
     left:50%
+
+video
+    width: 100%
+    height: 100%
