--- a/src/app/ocr/capture/capture.component.sass
+++ b/src/app/ocr/capture/capture.component.sass
@@ -1,7 +1,7 @@
 .capture
   display: grid
   grid-template-rows: 50px 1fr
-  min-height: 100vh
+  min-height: 99vh
   text-align: center
 
 .capture-browser
